<resources>
    <string name="app_name">NeRecipe</string>
    <string name="recipe_card_image_text_description">Recipe image</string>
    <string name="options_text_description">Recipe card options</string>
    <string name="fave_button_recipe_card_description">Favorite recipe</string>
    <string name="add_recipe_fb_recipes_feed">Add recipe</string>
    <string name="action_bar_search_button">Search</string>
    <string name="action_bar_filter_button">Filter</string>
    <string name="action_bar_ok_button">Confirm</string>
    <string name="action_bar_cancel_button">Cancel</string>
    <string name="action_bar_options_button">Recipe options</string>
    <string name="edit_recipe_options_menu">Edit recipe</string>
    <string name="delete_recipe_options_menu">Delete recipe</string>
    <string name="step_word">Step\u0020</string>
    <string name="step_number_text_description">Step number</string>
    <string name="step_text_description">Step text</string>
    <string name="delete_step_text_description">Delete step</string>
    <string name="step_image_description">Step image</string>
    <string name="ingredient_text_description">Ingredient</string>
    <string name="delete_ingredient_text_description">Delete ingredient</string>
    <string name="recipe_name">Name</string>
    <string name="step_word_text_description">Step</string>
    <string name="categories_word">Categories:</string>
    <string name="categories_word_text_description">Categories</string>
    <string name="new_recipe_image_description">Recipe image</string>
    <string name="new_recipe_name_description">Recipe name</string>
    <string name="new_recipe_time_description">Cooking time</string>
    <string name="recipe_time">Time (minutes)</string>
    <string name="add_category_button_text_description">Add category</string>
    <string name="ingredients_word_text_description">Ingredients</string>
    <string name="ingredients_word">Ingredients:</string>
    <string name="new_recipe_add_ingredient_description">Add ingredient</string>
    <string name="new_recipe_steps_word_description">Recipe steps</string>
    <string name="steps_word">Steps:</string>
    <string name="recipe_step">Step</string>
    <string name="new_recipe_add_step_image_description">Add step image</string>
    <string name="new_recipe_add_step_description">Add step</string>
    <string name="delete_step_image_text_description">Delete step image</string>
    <string name="new_recipe_save_button_description">Save recipe</string>
    <string name="save_recipe">Save recipe</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="fave_button_recipe_description">Fave recipe</string>
    <string name="recipe_name_text_description">Recipe name</string>
    <string name="recipe_time_text_description">Cooking time</string>
    <string name="time_format_hour">hour</string>
    <string name="time_format_hour_a">hours</string>
    <string name="time_format_hours">hours</string>
    <string name="time_format_minute">minute</string>
    <string name="time_format_minute_a">minutes</string>
    <string name="time_format_minutes">minutes</string>
    <string name="time_format_instantly">Instantly</string>
    <string name="recipe_add_recipe_image">Add recipe image</string>
    <string name="action_bar_all_recipes_button">All</string>
    <string name="action_bar_favorite_recipes_button">Favorites</string>
    <string name="reset_filters_button">Reset all</string>
    <string name="apply_filters_button">Apply selected</string>
    <string name="category_filter">Filter categories:</string>
    <string name="filter_all">All recipes</string>
    <string name="category_European">European</string>
    <string name="category_Asian">Asian</string>
    <string name="category_PanAsian">Pan-Asian</string>
    <string name="category_Oriental">Oriental</string>
    <string name="category_American">American</string>
    <string name="category_Russian">Russian</string>
    <string name="category_Mediterranean">Mediterranean</string>
    <string name="search_filter_hint">Search by recipe name</string>
    <string name="error_empty_name">Enter the recipe name!</string>
    <string name="error_empty_time">Enter cooking time!</string>
    <string name="error_empty_ingredients">The recipe needs at least one ingredient!</string>
    <string name="error_empty_steps">The recipe needs at least one step!</string>
    <string name="error_empty_categories">The recipe needs at least one category!</string>
</resources>