<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="ui.NewRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/newRecipeImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_spacing"
                android:adjustViewBounds="true"
                android:background="@color/grey_500"
                android:contentDescription="@string/new_recipe_image_description"
                android:maxHeight="@dimen/max_recipe_image_height"
                android:minHeight="@dimen/min_recipe_image_height"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newRecipeAddRecipeImageMaterialButton"
                style="@style/Widget.AppTheme.AddImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/recipe_add_recipe_image"
                android:padding="@dimen/common_spacing"
                app:iconTint="@color/black"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintTop_toTopOf="@id/newRecipeImageView" />

            <EditText
                android:id="@+id/newRecipeNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name"
                android:padding="@dimen/common_spacing"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeImageView" />

            <EditText
                android:id="@+id/newRecipeTimeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_time"
                android:inputType="number"
                android:padding="@dimen/common_spacing"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeNameEditText" />

            <TextView
                android:id="@+id/newRecipeCategoriesWordTextView"
                android:layout_width="365dp"
                android:layout_height="27dp"
                android:layout_marginTop="@dimen/common_spacing"
                android:breakStrategy="simple"
                android:contentDescription="@string/categories_word_text_description"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/categories_word"
                android:textSize="@dimen/text_size_head"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeTimeEditText"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageButton
                android:id="@+id/addCategoryImageButton"
                android:layout_width="67dp"
                android:layout_height="61dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/add_category_button_text_description"
                app:layout_constraintStart_toStartOf="@id/newRecipeCategoriesWordTextView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeCategoriesWordTextView"
                app:srcCompat="@drawable/ic_add_fb_24dp"
                app:tint="@color/black" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/newRecipeChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_spacing"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/addCategoryImageButton"
                app:layout_constraintTop_toBottomOf="@id/addCategoryImageButton">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/newRecipeIngredientsWordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:contentDescription="@string/ingredients_word_text_description"
                android:text="@string/ingredients_word"
                android:textSize="@dimen/text_size_head"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeChipGroup"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newRecipeIngredientsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeIngredientsWordTextView"
                tools:listitem="@layout/ingredient" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newRecipeAddIngredientButton"
                style="@style/Widget.AppTheme.OkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:contentDescription="@string/new_recipe_add_ingredient_description"
                app:layout_constraintBottom_toBottomOf="@id/newRecipeIngredientsEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/newRecipeIngredientsEditText" />

            <EditText
                android:id="@+id/newRecipeIngredientsEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name"
                android:padding="@dimen/common_spacing"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/newRecipeAddIngredientButton"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeIngredientsList" />

            <TextView
                android:id="@+id/newRecipeStepsWordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:contentDescription="@string/new_recipe_steps_word_description"
                android:text="@string/steps_word"
                android:textSize="@dimen/text_size_head"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeIngredientsEditText"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newRecipeStepsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeStepsWordTextView"
                tools:listitem="@layout/step" />

            <EditText
                android:id="@+id/newRecipeStepsEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_step"
                android:padding="@dimen/common_spacing"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/newRecipeAddImageStepImageButton"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeStepsList" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newRecipeAddImageStepImageButton"
                style="@style/Widget.AppTheme.AddImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/new_recipe_add_step_image_description"
                app:layout_constraintBottom_toBottomOf="@id/newRecipeStepsEditText"
                app:layout_constraintEnd_toStartOf="@id/newRecipeAddStepImageButton"
                app:layout_constraintTop_toTopOf="@id/newRecipeStepsEditText" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/newRecipeAddStepImageButton"
                style="@style/Widget.AppTheme.OkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:contentDescription="@string/new_recipe_add_step_description"
                app:layout_constraintBottom_toBottomOf="@id/newRecipeStepsEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/newRecipeStepsEditText" />

            <Button
                android:id="@+id/newRecipeSaveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_spacing"
                android:contentDescription="@string/new_recipe_save_button_description"
                android:padding="@dimen/common_spacing"
                android:text="@string/save_recipe"
                app:layout_constraintEnd_toEndOf="@id/newRecipeImageView"
                app:layout_constraintStart_toStartOf="@id/newRecipeImageView"
                app:layout_constraintTop_toBottomOf="@id/newRecipeStepsEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>